exports[`prefer-dom-node-remove > invalid(1): const element = document.querySelector(\".banner\"); (element.parentNode.removeChild)(element); 1`] = `

  1 | const element = document.querySelector(".banner"); (element.parentNode.removeChild)(element);

`;

exports[`prefer-dom-node-remove > invalid(1): const element = document.querySelector(\".banner\"); (element.parentNode.removeChild)(element); 2`] = `

Message:
> 1 | const element = document.querySelector(".banner"); (element.parentNode.removeChild)(element);
    |                                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.

`;

exports[`prefer-dom-node-remove > invalid(1): parentNode.removeChild(foo) 1`] = `

  1 | parentNode.removeChild(foo)

`;

exports[`prefer-dom-node-remove > invalid(1): parentNode.removeChild(foo) 2`] = `

Message:
> 1 | parentNode.removeChild(foo)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.

Output:
  1 | foo.remove()

`;

exports[`prefer-dom-node-remove > invalid(10): parentNode.removeChild( (  (new Image)) ) 1`] = `

  1 | parentNode.removeChild( (  (new Image)) )

`;

exports[`prefer-dom-node-remove > invalid(10): parentNode.removeChild( (  (new Image)) ) 2`] = `

Message:
> 1 | parentNode.removeChild( (  (new Image)) )
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.

Output:
  1 | (  (new Image)).remove()

`;

exports[`prefer-dom-node-remove > invalid(11): parentNode.removeChild( new Audio ) 1`] = `

  1 | parentNode.removeChild( new Audio )

`;

exports[`prefer-dom-node-remove > invalid(11): parentNode.removeChild( new Audio ) 2`] = `

Message:
> 1 | parentNode.removeChild( new Audio )
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.

Output:
  1 | (new Audio).remove()

`;

exports[`prefer-dom-node-remove > invalid(12): const array = []\nparentNode.removeChild([a, b, c].reduce(child => child, child)) 1`] = `

  1 | const array = []
  2 | parentNode.removeChild([a, b, c].reduce(child => child, child))

`;

exports[`prefer-dom-node-remove > invalid(12): const array = []\nparentNode.removeChild([a, b, c].reduce(child => child, child)) 2`] = `

Message:
  1 | const array = []
> 2 | parentNode.removeChild([a, b, c].reduce(child => child, child))
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.

Output:
  1 | const array = []
  2 | ;[a, b, c].reduce(child => child, child).remove()

`;

exports[`prefer-dom-node-remove > invalid(13): async function foo () {\n\tconst array = []\n\tparentNode.removeChild(\n\t\tawait getChild()\n\t);\n} 1`] = `

  1 | async function foo () {
  2 | 	const array = []
  3 | 	parentNode.removeChild(
  4 | 		await getChild()
  5 | 	);
  6 | }

`;

exports[`prefer-dom-node-remove > invalid(13): async function foo () {\n\tconst array = []\n\tparentNode.removeChild(\n\t\tawait getChild()\n\t);\n} 2`] = `

Message:
  1 | async function foo () {
  2 | 	const array = []
> 3 | 	parentNode.removeChild(
    | 	^^^^^^^^^^^^^^^^^^^^^^^
> 4 | 		await getChild()
    | ^^^^^^^^^^^^^^^^^^
> 5 | 	);
    | ^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.
  6 | }

Output:
  1 | async function foo () {
  2 | 	const array = []
  3 | 	;(await getChild()).remove();
  4 | }

`;

exports[`prefer-dom-node-remove > invalid(14): async function foo () {\n\tconst array = []\n\tparentNode.removeChild(\n\t\t(0, childNode)\n\t);\n} 1`] = `

  1 | async function foo () {
  2 | 	const array = []
  3 | 	parentNode.removeChild(
  4 | 		(0, childNode)
  5 | 	);
  6 | }

`;

exports[`prefer-dom-node-remove > invalid(14): async function foo () {\n\tconst array = []\n\tparentNode.removeChild(\n\t\t(0, childNode)\n\t);\n} 2`] = `

Message:
  1 | async function foo () {
  2 | 	const array = []
> 3 | 	parentNode.removeChild(
    | 	^^^^^^^^^^^^^^^^^^^^^^^
> 4 | 		(0, childNode)
    | ^^^^^^^^^^^^^^^^
> 5 | 	);
    | ^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.
  6 | }

Output:
  1 | async function foo () {
  2 | 	const array = []
  3 | 	;(0, childNode).remove();
  4 | }

`;

exports[`prefer-dom-node-remove > invalid(15): if (parentNode.removeChild(foo)) {} 1`] = `

  1 | if (parentNode.removeChild(foo)) {}

`;

exports[`prefer-dom-node-remove > invalid(15): if (parentNode.removeChild(foo)) {} 2`] = `

Message:
> 1 | if (parentNode.removeChild(foo)) {}
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.

Suggestion 1/1: Replace \`parentNode.removeChild(childNode)\` with \`childNode.remove()\`.:
  1 | if (foo.remove()) {}

`;

exports[`prefer-dom-node-remove > invalid(16): var removed = parentNode.removeChild(child); 1`] = `

  1 | var removed = parentNode.removeChild(child);

`;

exports[`prefer-dom-node-remove > invalid(16): var removed = parentNode.removeChild(child); 2`] = `

Message:
> 1 | var removed = parentNode.removeChild(child);
    |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.

Suggestion 1/1: Replace \`parentNode.removeChild(childNode)\` with \`childNode.remove()\`.:
  1 | var removed = child.remove();

`;

exports[`prefer-dom-node-remove > invalid(17): const foo = parentNode.removeChild(child); 1`] = `

  1 | const foo = parentNode.removeChild(child);

`;

exports[`prefer-dom-node-remove > invalid(17): const foo = parentNode.removeChild(child); 2`] = `

Message:
> 1 | const foo = parentNode.removeChild(child);
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.

Suggestion 1/1: Replace \`parentNode.removeChild(childNode)\` with \`childNode.remove()\`.:
  1 | const foo = child.remove();

`;

exports[`prefer-dom-node-remove > invalid(18): foo.bar(parentNode.removeChild(child)); 1`] = `

  1 | foo.bar(parentNode.removeChild(child));

`;

exports[`prefer-dom-node-remove > invalid(18): foo.bar(parentNode.removeChild(child)); 2`] = `

Message:
> 1 | foo.bar(parentNode.removeChild(child));
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.

Suggestion 1/1: Replace \`parentNode.removeChild(childNode)\` with \`childNode.remove()\`.:
  1 | foo.bar(child.remove());

`;

exports[`prefer-dom-node-remove > invalid(19): parentNode.removeChild(child) || \"foo\"; 1`] = `

  1 | parentNode.removeChild(child) || "foo";

`;

exports[`prefer-dom-node-remove > invalid(19): parentNode.removeChild(child) || \"foo\"; 2`] = `

Message:
> 1 | parentNode.removeChild(child) || "foo";
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.

Suggestion 1/1: Replace \`parentNode.removeChild(childNode)\` with \`childNode.remove()\`.:
  1 | child.remove() || "foo";

`;

exports[`prefer-dom-node-remove > invalid(2): const element = document.querySelector(\".banner\"); ((element.parentNode).removeChild)(element); 1`] = `

  1 | const element = document.querySelector(".banner"); ((element.parentNode).removeChild)(element);

`;

exports[`prefer-dom-node-remove > invalid(2): const element = document.querySelector(\".banner\"); ((element.parentNode).removeChild)(element); 2`] = `

Message:
> 1 | const element = document.querySelector(".banner"); ((element.parentNode).removeChild)(element);
    |                                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.

`;

exports[`prefer-dom-node-remove > invalid(2): parentNode.removeChild(this) 1`] = `

  1 | parentNode.removeChild(this)

`;

exports[`prefer-dom-node-remove > invalid(2): parentNode.removeChild(this) 2`] = `

Message:
> 1 | parentNode.removeChild(this)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.

Output:
  1 | this.remove()

`;

exports[`prefer-dom-node-remove > invalid(20): parentNode.removeChild(child) + 0; 1`] = `

  1 | parentNode.removeChild(child) + 0;

`;

exports[`prefer-dom-node-remove > invalid(20): parentNode.removeChild(child) + 0; 2`] = `

Message:
> 1 | parentNode.removeChild(child) + 0;
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.

Suggestion 1/1: Replace \`parentNode.removeChild(childNode)\` with \`childNode.remove()\`.:
  1 | child.remove() + 0;

`;

exports[`prefer-dom-node-remove > invalid(21): +parentNode.removeChild(child); 1`] = `

  1 | +parentNode.removeChild(child);

`;

exports[`prefer-dom-node-remove > invalid(21): +parentNode.removeChild(child); 2`] = `

Message:
> 1 | +parentNode.removeChild(child);
    |  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.

Suggestion 1/1: Replace \`parentNode.removeChild(childNode)\` with \`childNode.remove()\`.:
  1 | +child.remove();

`;

exports[`prefer-dom-node-remove > invalid(22): parentNode.removeChild(child) ? \"foo\" : \"bar\"; 1`] = `

  1 | parentNode.removeChild(child) ? "foo" : "bar";

`;

exports[`prefer-dom-node-remove > invalid(22): parentNode.removeChild(child) ? \"foo\" : \"bar\"; 2`] = `

Message:
> 1 | parentNode.removeChild(child) ? "foo" : "bar";
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.

Suggestion 1/1: Replace \`parentNode.removeChild(childNode)\` with \`childNode.remove()\`.:
  1 | child.remove() ? "foo" : "bar";

`;

exports[`prefer-dom-node-remove > invalid(23): if (parentNode.removeChild(child)) {} 1`] = `

  1 | if (parentNode.removeChild(child)) {}

`;

exports[`prefer-dom-node-remove > invalid(23): if (parentNode.removeChild(child)) {} 2`] = `

Message:
> 1 | if (parentNode.removeChild(child)) {}
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.

Suggestion 1/1: Replace \`parentNode.removeChild(childNode)\` with \`childNode.remove()\`.:
  1 | if (child.remove()) {}

`;

exports[`prefer-dom-node-remove > invalid(24): const foo = [parentNode.removeChild(child)] 1`] = `

  1 | const foo = [parentNode.removeChild(child)]

`;

exports[`prefer-dom-node-remove > invalid(24): const foo = [parentNode.removeChild(child)] 2`] = `

Message:
> 1 | const foo = [parentNode.removeChild(child)]
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.

Suggestion 1/1: Replace \`parentNode.removeChild(childNode)\` with \`childNode.remove()\`.:
  1 | const foo = [child.remove()]

`;

exports[`prefer-dom-node-remove > invalid(25): const foo = { bar: parentNode.removeChild(child) } 1`] = `

  1 | const foo = { bar: parentNode.removeChild(child) }

`;

exports[`prefer-dom-node-remove > invalid(25): const foo = { bar: parentNode.removeChild(child) } 2`] = `

Message:
> 1 | const foo = { bar: parentNode.removeChild(child) }
    |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.

Suggestion 1/1: Replace \`parentNode.removeChild(childNode)\` with \`childNode.remove()\`.:
  1 | const foo = { bar: child.remove() }

`;

exports[`prefer-dom-node-remove > invalid(26): function foo() { return parentNode.removeChild(child); } 1`] = `

  1 | function foo() { return parentNode.removeChild(child); }

`;

exports[`prefer-dom-node-remove > invalid(26): function foo() { return parentNode.removeChild(child); } 2`] = `

Message:
> 1 | function foo() { return parentNode.removeChild(child); }
    |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.

Suggestion 1/1: Replace \`parentNode.removeChild(childNode)\` with \`childNode.remove()\`.:
  1 | function foo() { return child.remove(); }

`;

exports[`prefer-dom-node-remove > invalid(27): const foo = () => { return parentElement.removeChild(child); } 1`] = `

  1 | const foo = () => { return parentElement.removeChild(child); }

`;

exports[`prefer-dom-node-remove > invalid(27): const foo = () => { return parentElement.removeChild(child); } 2`] = `

Message:
> 1 | const foo = () => { return parentElement.removeChild(child); }
    |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.

Suggestion 1/1: Replace \`parentNode.removeChild(childNode)\` with \`childNode.remove()\`.:
  1 | const foo = () => { return child.remove(); }

`;

exports[`prefer-dom-node-remove > invalid(28): foo(bar = parentNode.removeChild(child)) 1`] = `

  1 | foo(bar = parentNode.removeChild(child))

`;

exports[`prefer-dom-node-remove > invalid(28): foo(bar = parentNode.removeChild(child)) 2`] = `

Message:
> 1 | foo(bar = parentNode.removeChild(child))
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.

Suggestion 1/1: Replace \`parentNode.removeChild(childNode)\` with \`childNode.remove()\`.:
  1 | foo(bar = child.remove())

`;

exports[`prefer-dom-node-remove > invalid(29): const removed = a?.b.parentNode.removeChild(a.b); 1`] = `

  1 | const removed = a?.b.parentNode.removeChild(a.b);

`;

exports[`prefer-dom-node-remove > invalid(29): const removed = a?.b.parentNode.removeChild(a.b); 2`] = `

Message:
> 1 | const removed = a?.b.parentNode.removeChild(a.b);
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.

Suggestion 1/2: Replace \`parentNode.removeChild(childNode)\` with \`childNode?.remove()\`.:
  1 | const removed = a?.b?.remove();

Suggestion 2/2: Replace \`parentNode.removeChild(childNode)\` with \`childNode.remove()\`.:
  1 | const removed = a?.b.remove();

`;

exports[`prefer-dom-node-remove > invalid(3): const element = document.querySelector(\".banner\"); (element.parentNode).removeChild(element); 1`] = `

  1 | const element = document.querySelector(".banner"); (element.parentNode).removeChild(element);

`;

exports[`prefer-dom-node-remove > invalid(3): const element = document.querySelector(\".banner\"); (element.parentNode).removeChild(element); 2`] = `

Message:
> 1 | const element = document.querySelector(".banner"); (element.parentNode).removeChild(element);
    |                                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.

`;

exports[`prefer-dom-node-remove > invalid(3): parentNode.removeChild(some.node) 1`] = `

  1 | parentNode.removeChild(some.node)

`;

exports[`prefer-dom-node-remove > invalid(3): parentNode.removeChild(some.node) 2`] = `

Message:
> 1 | parentNode.removeChild(some.node)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.

Output:
  1 | some.node.remove()

`;

exports[`prefer-dom-node-remove > invalid(30): foo().removeChild(child) 1`] = `

  1 | foo().removeChild(child)

`;

exports[`prefer-dom-node-remove > invalid(30): foo().removeChild(child) 2`] = `

Message:
> 1 | foo().removeChild(child)
    | ^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.

Suggestion 1/1: Replace \`parentNode.removeChild(childNode)\` with \`childNode.remove()\`.:
  1 | child.remove()

`;

exports[`prefer-dom-node-remove > invalid(31): foo[doSomething()].removeChild(child) 1`] = `

  1 | foo[doSomething()].removeChild(child)

`;

exports[`prefer-dom-node-remove > invalid(31): foo[doSomething()].removeChild(child) 2`] = `

Message:
> 1 | foo[doSomething()].removeChild(child)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.

Suggestion 1/1: Replace \`parentNode.removeChild(childNode)\` with \`childNode.remove()\`.:
  1 | child.remove()

`;

exports[`prefer-dom-node-remove > invalid(32): foo.parentNode.removeChild(foo) 1`] = `

  1 | foo.parentNode.removeChild(foo)

`;

exports[`prefer-dom-node-remove > invalid(32): foo.parentNode.removeChild(foo) 2`] = `

Message:
> 1 | foo.parentNode.removeChild(foo)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.

Output:
  1 | foo.remove()

`;

exports[`prefer-dom-node-remove > invalid(33): foo.parentElement.removeChild(foo) 1`] = `

  1 | foo.parentElement.removeChild(foo)

`;

exports[`prefer-dom-node-remove > invalid(33): foo.parentElement.removeChild(foo) 2`] = `

Message:
> 1 | foo.parentElement.removeChild(foo)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.

Output:
  1 | foo.remove()

`;

exports[`prefer-dom-node-remove > invalid(34): parentNode?.removeChild(foo) 1`] = `

  1 | parentNode?.removeChild(foo)

`;

exports[`prefer-dom-node-remove > invalid(34): parentNode?.removeChild(foo) 2`] = `

Message:
> 1 | parentNode?.removeChild(foo)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.

Suggestion 1/2: Replace \`parentNode.removeChild(childNode)\` with \`childNode?.remove()\`.:
  1 | foo?.remove()

Suggestion 2/2: Replace \`parentNode.removeChild(childNode)\` with \`childNode.remove()\`.:
  1 | foo.remove()

`;

exports[`prefer-dom-node-remove > invalid(35): foo?.parentNode.removeChild(foo) 1`] = `

  1 | foo?.parentNode.removeChild(foo)

`;

exports[`prefer-dom-node-remove > invalid(35): foo?.parentNode.removeChild(foo) 2`] = `

Message:
> 1 | foo?.parentNode.removeChild(foo)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.

Output:
  1 | foo?.remove()

`;

exports[`prefer-dom-node-remove > invalid(36): foo.parentNode?.removeChild(foo) 1`] = `

  1 | foo.parentNode?.removeChild(foo)

`;

exports[`prefer-dom-node-remove > invalid(36): foo.parentNode?.removeChild(foo) 2`] = `

Message:
> 1 | foo.parentNode?.removeChild(foo)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.

Output:
  1 | foo.remove()

`;

exports[`prefer-dom-node-remove > invalid(37): foo?.parentNode?.removeChild(foo) 1`] = `

  1 | foo?.parentNode?.removeChild(foo)

`;

exports[`prefer-dom-node-remove > invalid(37): foo?.parentNode?.removeChild(foo) 2`] = `

Message:
> 1 | foo?.parentNode?.removeChild(foo)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.

Output:
  1 | foo?.remove()

`;

exports[`prefer-dom-node-remove > invalid(38): ((foo))?.parentNode.removeChild(foo) 1`] = `

  1 | ((foo))?.parentNode.removeChild(foo)

`;

exports[`prefer-dom-node-remove > invalid(38): ((foo))?.parentNode.removeChild(foo) 2`] = `

Message:
> 1 | ((foo))?.parentNode.removeChild(foo)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.

Output:
  1 | ((foo))?.remove()

`;

exports[`prefer-dom-node-remove > invalid(39): foo.bar?.parentNode.removeChild(foo.bar) 1`] = `

  1 | foo.bar?.parentNode.removeChild(foo.bar)

`;

exports[`prefer-dom-node-remove > invalid(39): foo.bar?.parentNode.removeChild(foo.bar) 2`] = `

Message:
> 1 | foo.bar?.parentNode.removeChild(foo.bar)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.

Output:
  1 | foo.bar?.remove()

`;

exports[`prefer-dom-node-remove > invalid(4): (element).parentNode.removeChild(element); 1`] = `

  1 | (element).parentNode.removeChild(element);

`;

exports[`prefer-dom-node-remove > invalid(4): (element).parentNode.removeChild(element); 2`] = `

Message:
> 1 | (element).parentNode.removeChild(element);
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.

Output:
  1 | (element).remove();

`;

exports[`prefer-dom-node-remove > invalid(4): parentNode.removeChild(getChild()) 1`] = `

  1 | parentNode.removeChild(getChild())

`;

exports[`prefer-dom-node-remove > invalid(4): parentNode.removeChild(getChild()) 2`] = `

Message:
> 1 | parentNode.removeChild(getChild())
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.

Output:
  1 | getChild().remove()

`;

exports[`prefer-dom-node-remove > invalid(40): foo.bar?.parentNode.removeChild(foo[\"bar\"]) 1`] = `

  1 | foo.bar?.parentNode.removeChild(foo["bar"])

`;

exports[`prefer-dom-node-remove > invalid(40): foo.bar?.parentNode.removeChild(foo[\"bar\"]) 2`] = `

Message:
> 1 | foo.bar?.parentNode.removeChild(foo["bar"])
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.

Output:
  1 | foo.bar?.remove()

`;

exports[`prefer-dom-node-remove > invalid(41): a?.b.parentNode.removeChild(a.b) 1`] = `

  1 | a?.b.parentNode.removeChild(a.b)

`;

exports[`prefer-dom-node-remove > invalid(41): a?.b.parentNode.removeChild(a.b) 2`] = `

Message:
> 1 | a?.b.parentNode.removeChild(a.b)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.

Output:
  1 | a?.b.remove()

`;

exports[`prefer-dom-node-remove > invalid(42): a?.b?.parentNode.removeChild(a.b) 1`] = `

  1 | a?.b?.parentNode.removeChild(a.b)

`;

exports[`prefer-dom-node-remove > invalid(42): a?.b?.parentNode.removeChild(a.b) 2`] = `

Message:
> 1 | a?.b?.parentNode.removeChild(a.b)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.

Output:
  1 | a?.b?.remove()

`;

exports[`prefer-dom-node-remove > invalid(43): a?.[\"b\"].parentNode.removeChild(a.b) 1`] = `

  1 | a?.["b"].parentNode.removeChild(a.b)

`;

exports[`prefer-dom-node-remove > invalid(43): a?.[\"b\"].parentNode.removeChild(a.b) 2`] = `

Message:
> 1 | a?.["b"].parentNode.removeChild(a.b)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.

Output:
  1 | a?.["b"].remove()

`;

exports[`prefer-dom-node-remove > invalid(44): a.b?.c.parentNode.removeChild(foo) 1`] = `

  1 | a.b?.c.parentNode.removeChild(foo)

`;

exports[`prefer-dom-node-remove > invalid(44): a.b?.c.parentNode.removeChild(foo) 2`] = `

Message:
> 1 | a.b?.c.parentNode.removeChild(foo)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.

Suggestion 1/2: Replace \`parentNode.removeChild(childNode)\` with \`childNode?.remove()\`.:
  1 | foo?.remove()

Suggestion 2/2: Replace \`parentNode.removeChild(childNode)\` with \`childNode.remove()\`.:
  1 | foo.remove()

`;

exports[`prefer-dom-node-remove > invalid(45): a[b?.c].parentNode.removeChild(foo) 1`] = `

  1 | a[b?.c].parentNode.removeChild(foo)

`;

exports[`prefer-dom-node-remove > invalid(45): a[b?.c].parentNode.removeChild(foo) 2`] = `

Message:
> 1 | a[b?.c].parentNode.removeChild(foo)
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.

Output:
  1 | foo.remove()

`;

exports[`prefer-dom-node-remove > invalid(5): element.parentNode.removeChild((element)); 1`] = `

  1 | element.parentNode.removeChild((element));

`;

exports[`prefer-dom-node-remove > invalid(5): element.parentNode.removeChild((element)); 2`] = `

Message:
> 1 | element.parentNode.removeChild((element));
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.

Output:
  1 | element.remove();

`;

exports[`prefer-dom-node-remove > invalid(5): parentNode.removeChild(lib.getChild()) 1`] = `

  1 | parentNode.removeChild(lib.getChild())

`;

exports[`prefer-dom-node-remove > invalid(5): parentNode.removeChild(lib.getChild()) 2`] = `

Message:
> 1 | parentNode.removeChild(lib.getChild())
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.

Output:
  1 | lib.getChild().remove()

`;

exports[`prefer-dom-node-remove > invalid(6): parentNode.removeChild((() => childNode)()) 1`] = `

  1 | parentNode.removeChild((() => childNode)())

`;

exports[`prefer-dom-node-remove > invalid(6): parentNode.removeChild((() => childNode)()) 2`] = `

Message:
> 1 | parentNode.removeChild((() => childNode)())
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.

Output:
  1 | (() => childNode)().remove()

`;

exports[`prefer-dom-node-remove > invalid(7): async function foo () {\n\tparentNode.removeChild(\n\t\tawait getChild()\n\t);\n} 1`] = `

  1 | async function foo () {
  2 | 	parentNode.removeChild(
  3 | 		await getChild()
  4 | 	);
  5 | }

`;

exports[`prefer-dom-node-remove > invalid(7): async function foo () {\n\tparentNode.removeChild(\n\t\tawait getChild()\n\t);\n} 2`] = `

Message:
  1 | async function foo () {
> 2 | 	parentNode.removeChild(
    | 	^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 		await getChild()
    | ^^^^^^^^^^^^^^^^^^
> 4 | 	);
    | ^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.
  5 | }

Output:
  1 | async function foo () {
  2 | 	(await getChild()).remove();
  3 | }

`;

exports[`prefer-dom-node-remove > invalid(8): async function foo () {\n\tparentNode.removeChild(\n\t\t(await getChild())\n\t);\n} 1`] = `

  1 | async function foo () {
  2 | 	parentNode.removeChild(
  3 | 		(await getChild())
  4 | 	);
  5 | }

`;

exports[`prefer-dom-node-remove > invalid(8): async function foo () {\n\tparentNode.removeChild(\n\t\t(await getChild())\n\t);\n} 2`] = `

Message:
  1 | async function foo () {
> 2 | 	parentNode.removeChild(
    | 	^^^^^^^^^^^^^^^^^^^^^^^
> 3 | 		(await getChild())
    | ^^^^^^^^^^^^^^^^^^^^
> 4 | 	);
    | ^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.
  5 | }

Output:
  1 | async function foo () {
  2 | 	(await getChild()).remove();
  3 | }

`;

exports[`prefer-dom-node-remove > invalid(9): parentNode.removeChild((0, child)) 1`] = `

  1 | parentNode.removeChild((0, child))

`;

exports[`prefer-dom-node-remove > invalid(9): parentNode.removeChild((0, child)) 2`] = `

Message:
> 1 | parentNode.removeChild((0, child))
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Prefer \`childNode.remove()\` over \`parentNode.removeChild(childNode)\`.

Output:
  1 | (0, child).remove()

`;
